--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^7.1.3",
         "express-session": "^1.17.3",
         "mongoose": "^7.6.3",
         "nodemon": "^3.0.1"
